--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,32 +7,60 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
-
+    text-align: center;
+    display: block;
+   
 }
 
 
 /* Ejercicio 2: Posicionar el header */
 
-/* Acá va tu código */
+#ejercicioDos {
+    display: block;
+    color: #edf0f4;
+    
+}
 
 
 
 /* Ejercicio 3: */
 
-/* Acá va tu código */
+#ejercicioTres{
+    position: relative;
+    top: 100px;
+    left: 200px;
+}
 
 
 
 /* Ejercicio 4: */
+#ejercicioCuatro{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
 
-/* Acá va tu código */
 
 
 
 /* Ejercicio 5: */
 
-/* Acá va tu código */
+#ejercicioCinco{
+    display: flex;
+
+    align-items: center;
+
+    justify-content: space-around;
+}
 
 
 
 /* Ejercicio 6. */
+#ejercicioCinco{
+    flex-direction: row-reverse;
+    
+}
+
+/* #ejercicioSiete{
+
+} */
